WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301509
Playback of application/ogg blob media is broken
https://bugs.webkit.org/show_bug.cgi?id=301509
Summary
Playback of application/ogg blob media is broken
youenn fablet
Reported
2025-10-27 02:23:28 PDT
Playback of application/ogg blob media is broken
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2025-10-27 02:23:53 PDT
<
rdar://163119790
>
youenn fablet
Comment 2
2025-10-27 03:19:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53030
EWS
Comment 3
2025-12-16 11:21:54 PST
Committed
304530@main
(6792010dc8f9): <
https://commits.webkit.org/304530@main
> Reviewed commits have been landed. Closing PR #53030 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug